Recent Changes for wxPython
=====================================================================

2.8.7.2
-------
*

Added the PlateButton class from Cody Precord.




2.8.7.1
-------
* 29-Nov-2007

Applied Patch [ 1783958 ] to use the native renderer for drawing the
checkboxes in CheckListCtrlMixin.

Incorporated the new version of XRCed.  This is the result of a Google
Summer of Code 2007 project by Roman Rolinsky, and includes a number
of UI enhancements, as well as a mechanism for adding support for new
components without needing changes to XRCed itself.  These new
components can be those supported at the C++ layer of XRC, as well as
custom XRC handlers written in Python.  See
http://wiki.wxpython.org/XRCed_Refactoring_Project

wxMac: Fixed wx.BusyInfo so it doesn't steal the activated status
from the parent window.  (This actually applies to all frames with the
wx.FRAME_TOOL_WINDOW style and no decorations.)

wxMac: Fixed the lack of painting the area between scrollbars on
Leopard.  

wxMac: Fixed assertion errors dealing with toolbars on Leopard.

wxMac: Multiline textcontrols now support attributes for margins and
alignement; only a single tab distance can be set though.

Added the wx.Image.AdjustChannels method.  This function muliplies all
4 channels (red, green, blue, alpha) with a factor (around
1.0). Useful for gamma correction, colour correction and to add a
certain amount of transparency to a image.

Added Editra to the distribution, to give us a simple yet powerful
programmer's code editor to replace the never finished PyAlaMode
editor and related tools.  Many thanks to Cody Precord for the work he
has done on this tool and for allowing us to make it part of wxPython.
Editra has syntax highlighting and other support for over 40
programming languages, excellent OS X integration, is extendable via
plugins, and for those that are on the VI side of the fence there is a
VI emulation mode.  For more information see the Editra website at
http://editra.org/